# graft

./: .gitignore  FINDINGS.md  README.md  bf16-summary.html  breakthrough.html  context.md  demo.html  explorer.html  pyproject.toml  research_direction.html  summary.html  theory.html
results/: 4b_full_ifeval.json  4b_graft_fixed.json  4b_inference_steering.json  all_methods_summary.json  delta_rank_analysis.json  entropy_adaptive_experiment.json  generation_14b_instruct.json  generation_8b_base.json  generation_Qwen3-14B-Instruct-bf16.json  generation_Qwen3-8B-Base-bf16.json  generation_proxy_tuning.json  generation_proxy_tuning_bf16.json  generation_samples.json  generation_samples_bf16.json  ifeval_logits.json  ifeval_logits_bf16.json  ifeval_scores.json  ifeval_scores_Qwen3-14B-Instruct-bf16.json  ifeval_scores_Qwen3-8B-Base-bf16.json  ifeval_scores_bf16.json  ifeval_scores_proxy_tuning_bf16.json  logprobs_probe.json  overnight_exploration.json  proxy_restricted_k50.json  speculative_delta_experiment.json  ssd_all_conditions_eval.json  ssd_eval_50.json  topk_boost_experiment.json
scripts/: eval_beam_delta.py  eval_decoding_methods.py  eval_delta_rank.py  eval_entropy_adaptive.py  eval_generate.py  eval_generate_bf16.py  eval_generate_proxy.py  eval_generate_single.py  eval_generate_sparse_delta.py  eval_ifeval_logits.py  eval_ifeval_logits_bf16.py  eval_ifeval_score.py  eval_ifeval_score_bf16.py  eval_proxy_tuning_baseline_bf16.py  eval_single_model_bf16.py  eval_speculative_delta.py  eval_topk_boost.py  oracle_sanity_check.py  oracle_sanity_check_bf16.py  (+8 more)
(+3 files in other folders)
