[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graft"
version = "0.1.0"
description = "Gated Restricted Adaptation via Fine-Tuning Transfer"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.22",
    "mlx-lm>=0.21",
    "numpy",
    "datasets",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pyright>=1.1",
    "pytest>=8",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
